--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,14 @@ dist
 
 # TernJS port file
 .tern-port
+
+#idea
+.idea*
+
+#build
+.build/
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
+
